<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item"
        android:orientation="horizontal">

        <Button
            android:id="@+id/widget_previous_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_widget_bt_previous"
            android:text="@string/previous" />

        <TextView
            android:id="@+id/widget_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            tools:text="Today" />

        <Button
            android:id="@+id/widget_next_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_widget_bt_next"
            android:text="@string/next" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green13"
        android:padding="@dimen/widget_list_padding">

        <ListView
            android:id="@+id/widget_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="8dp"
            tools:listitem="@layout/scores_list_item" />

        <TextView
            android:id="@+id/widget_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/list_item"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/empty_scores"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black"
            android:visibility="invisible" />
    </FrameLayout>


</LinearLayout>